# docs/swagger.json
@@ -69,7 +69,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/pagination.Response"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Category"
+                            }
                         }
                     },
                     "500": {
@@ -91,8 +94,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "category",
-                    "random"
+                    "category"
                 ],
                 "summary": "Returns a random category",
                 "responses": {
@@ -196,7 +198,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/pagination.Response"
+                                "$ref": "#/definitions/models.Clue"
                             }
                         }
                     },
@@ -219,8 +221,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "clue",
-                    "random"
+                    "clue"
                 ],
                 "summary": "Returns a random clue",
                 "responses": {
@@ -254,7 +255,7 @@
                 "tags": [
                     "clue"
                 ],
-                "summary": "Returns a clues",
+                "summary": "Returns a clue",
                 "parameters": [
                     {
                         "type": "integer",
@@ -283,7 +284,50 @@
         },
         "/games": {
             "get": {
-                "responses": {}
+                "description": "Returns a list of games",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "game"
+                ],
+                "summary": "Returns a list of games",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "default": 10,
+                        "description": "Page size",
+                        "name": "size",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Game"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
             }
         },
         "/games/random": {
@@ -296,8 +340,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "game",
-                    "random"
+                    "game"
                 ],
                 "summary": "Returns a random game",
                 "responses": {
@@ -321,7 +364,6 @@
         },
         "/games/{gameID}": {
             "get": {
-                "description": "Returns a game",
                 "consumes": [
                     "*/*"
                 ],
@@ -331,7 +373,6 @@
                 "tags": [
                     "game"
                 ],
-                "summary": "Returns a games",
                 "parameters": [
                     {
                         "type": "string",
@@ -444,26 +485,6 @@
                 "tapedDate": {
                     "type": "string",
                     "example": "2019-01-01"
-                }
-            }
-        },
-        "pagination.Response": {
-            "type": "object",
-            "properties": {
-                "_links": {
-                    "$ref": "#/definitions/pagination.links"
-                },
-                "data": {}
-            }
-        },
-        "pagination.links": {
-            "type": "object",
-            "properties": {
-                "next": {
-                    "type": "string"
-                },
-                "prev": {
-                    "type": "string"
                 }
             }
         },
