# pkg/models/category.go
@@ -54,7 +54,7 @@ func (db *JeppDB) InsertCategory(name string) (*Category, error) {
 	if err := tx.Commit(); err == nil {
 		lid, _ := res.LastInsertId()
 		cat = &Category{CategoryID: lid, Name: name}
-		log.Infof("inserted category -- %+v", cat)
+		log.Debugf("inserted category -- %+v", cat)
 	} else {
 		return nil, oops.Wrapf(err, "could not insert category: %v", name)
 	}
