# pkg/server/game.go
@@ -5,7 +5,6 @@ import (
 	"strconv"
 
 	"github.com/ecshreve/jepp/pkg/models"
-	"github.com/ecshreve/jepp/pkg/server/pagination"
 	"github.com/ecshreve/jepp/pkg/utils"
 	"github.com/gin-gonic/gin"
 	"github.com/samsarahq/go/oops"
@@ -22,12 +21,12 @@ import (
 //	@Produce		json
 //	@Param			page	query		int	false	"Page number"	default(1)
 //	@Param			size	query		int	false	"Page size"		default(10)
-//	@Success		200		{object}	pagination.Response
-
-//	@Router	/games [get]
+//	@Success		200		{array}		models.Game
+//	@Failure		500		{object}	utils.HTTPError
+//	@Router			/games [get]
 func (s *Server) GamesHandler(c *gin.Context) {
 	page := c.GetInt("page")
-	size := c.GetInt("limit")
+	size := c.GetInt("size")
 	paginationParams := models.PaginationParams{Page: page, PageSize: size}
 
 	games, err := s.DB.ListGames(&paginationParams)
@@ -37,24 +36,21 @@ func (s *Server) GamesHandler(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, &pagination.Response{
-		Data:  games,
-		Links: pagination.GetLinks(c, int64(len(games)), &paginationParams),
-	})
+	c.JSON(http.StatusOK, games)
 }
 
 // GameHandler godoc
 //
-//	@Summary		Returns a games
+//	@Summary		Returns a game
 //	@Description	Returns a game
-//
-//	@Tags			game
-//	@Accept			*/*
-//	@Produce		json
-//	@Param			gameID	path		string	true	"Game ID"	default(7040)
-//	@Success		200		{object}	models.Game
-//	@Failure		500		{object}	utils.HTTPError
-//	@Router			/games/{gameID} [get]
+
+//	@Tags		game
+//	@Accept		*/*
+//	@Produce	json
+//	@Param		gameID	path		string	true	"Game ID"	default(7040)
+//	@Success	200		{object}	models.Game
+//	@Failure	500		{object}	utils.HTTPError
+//	@Router		/games/{gameID} [get]
 func (s *Server) GameHandler(c *gin.Context) {
 	gameIDStr := c.Param("gameID")
 	gameID, err := strconv.ParseInt(gameIDStr, 10, 64)
@@ -79,7 +75,7 @@ func (s *Server) GameHandler(c *gin.Context) {
 //	@Summary		Returns a random game
 //	@Description	Returns a random game
 //
-//	@Tags			game,random
+//	@Tags			game
 //	@Accept			*/*
 //	@Produce		json
 //	@Success		200	{array}		models.Game
